[tool.poetry]
name = "genwall"
version = "0.1.0"
description = ""
authors = ["james-julius <jamesdarby7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stability-sdk = "^0.8.6"
geocoder = "^1.38.1"
python-dotenv = "^1.0.1"
applescript = "^2021.2.9"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
